<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".NeuerEintragActivity" >


    <EditText
        android:id="@+id/editTextNeueAbk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:singleLine="true"
        android:hint="@string/textedit_hint_abk_neu" />

    <EditText
        android:id="@+id/editTextNeueBedeutung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNeueAbk"
        android:layout_alignParentLeft="true"
        android:hint="@string/textedit_hint_bedeutung_neu" />


    <Button
        android:id="@+id/buttonEintragEinfuegen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNeueBedeutung"
        android:layout_marginTop="10dp"
        android:text="@string/button_label_einfuegen"
        android:onClick="onButtonEinfuegen" />

    <Button
        android:id="@+id/buttonZurueck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEintragEinfuegen"
        android:text="@string/button_label_zurueck"
        android:onClick="onButtonZurueck"/>

</RelativeLayout>